# AI-Recruiter-Agent

./: .env.example  .gitignore  DevelopmentLog.txt  README.md  connections.json  main.py  package-lock.json  package.json  pyproject.toml
core/: agent.py  auth_config.py  connections.py  constants.py  gmail_send.py  tools.py
python-llm/: DocUtils.py  main.py  requirements.txt  resumeParsing.py  resumeTools.py
src/: db.js  server.js
src/config/: authConfigs.js  composio.js
src/frontend/: index.html
src/python-llm/: main.py
