[project]
name = "ai-recruiter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "composio==0.8.15",
    "composio-client==1.9.1",
    "composio-gemini==0.8.13",
    "cryptography==46.0.1",
    "distro==1.9.0",
    "google-auth==2.41.0",
    "google-genai==1.38.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.11.0",
    "openai==1.109.1",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==11.3.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyfiglet==1.0.4",
    "pypdfium2==4.30.0",
    "pysher==1.0.8",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
]
